<resources>
    <string name="app_name">CompanyTest</string>
    <string name="please_login_or_sign_up">Please Login or Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="donot_have_account_sign_up">DONOT HAVE ACCOUNT? SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account_sign_in">Already have account? Sign In</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="permission_denied">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="gallery">gallery</string>
    <string name="camera">Camera</string>
    <string name="delete_success">IMAGE DELETED SUCCESSFULLY</string>
    <string name="image_not_delete">IMAGE NOT DELETED SUCCESSFULLY</string>
    <string name="stay_safe">Stay Safe</string>
    <string name="alert">Alert!</string>
    <string name="alert_des">Are You Sure? You Want To Delete This Image?</string>
    <string name="confirm">Confirm</string>
    <string name="images">Images</string>

</resources>
